--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
+title: glFTPd best practice
+description: just my humble opinion about glFTPd 
